--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Java1</module>
+        <module>Java2</module>
+        <module>Java3</module>
     </modules>
 
 
