--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Java1</module>
         <module>Java2</module>
         <module>Java3</module>
+        <module>chat</module>
     </modules>
 
 
